--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,15 +1,7 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "type": "chrome",
-            "request": "launch",
-            "name": "Launch Chrome against localhost",
-            "url": "http://localhost:8080",
-            "webRoot": "${workspaceFolder}"
-        }
-    ]
+  "type": "pwa-chrome",
+  "request": "launch",
+  "name": "Launch Chrome against localhost",
+  "url": "http://localhost:5500", // ¡CÁMBIALO A 5500!
+  "webRoot": "${workspaceFolder}"
 }
