--- a/rockxy/rockxy/src/main/resources/application.properties
+++ b/rockxy/rockxy/src/main/resources/application.properties
@@ -1,12 +1,22 @@
-spring.application.name=accessing-data-jpa
+# Configuración del servidor
+server.port=8080
 
-# configuración de conexión a h2
-spring.datasource.url=jdbc:h2:mem:juegorol
+# Configuración de H2
+spring.datasource.url=jdbc:h2:mem:rockxydb
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=rockxy
-spring.datasource.password=
+spring.datasource.username=Rockxyadmin
+spring.datasource.password=1234Rockxy
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-spring.jpa.hibernate.ddl-auto=update
-
+# Habilitar consola H2 (accesible en http://localhost:8080/h2-console)
 spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# JWT
+jwt.secret=TuClaveSecretaSuperSeguraParaRockxyQueDebeSerMuyLarga123456
+jwt.expiration=86400000
