--- a/backend/rockxy/rockxy/pom.xml
+++ b/backend/rockxy/rockxy/pom.xml
@@ -27,7 +27,7 @@
 		<url/>
 	</scm>
 	<properties>
-		<java.version>24</java.version>
+		<java.version>17</java.version>
 	</properties>
 	<dependencies>
     <!-- Dependencia principal de Spring Boot -->
@@ -70,8 +70,8 @@
     <!-- Driver para tu BD (ej: PostgreSQL o MySQL) -->
     
     <dependency>
-        <groupId>org.postgresql</groupId>
-        <artifactId>postgresql</artifactId>
+        <groupId>com.h2database</groupId>
+        <artifactId>h2</artifactId>
         <scope>runtime</scope>
     </dependency>
     
