--- a/backend/rockxy/rockxy/src/main/resources/application.properties
+++ b/backend/rockxy/rockxy/src/main/resources/application.properties
@@ -1,22 +1,52 @@
-# Configuración del servidor
+# ========================================
+# CONFIGURACIÓN DEL SERVIDOR
+# ========================================
 server.port=8080
+server.error.include-message=always
+server.error.include-binding-errors=always
 
-# Configuración de H2
+# ========================================
+# CONFIGURACIÓN DE H2 DATABASE
+# ========================================
 spring.datasource.url=jdbc:h2:mem:rockxydb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=Rockxyadmin
 spring.datasource.password=1234Rockxy
+
+# PLATAFORMA DE BASE DE DATOS
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-# Habilitar consola H2 (accesible en http://localhost:8080/h2-console)
+# ========================================
+# CONSOLA H2 - ACCESO PÚBLICO
+# ========================================
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+spring.h2.console.settings.web-allow-others=true
+spring.h2.console.settings.trace=false
 
-# Hibernate
+# ========================================
+# HIBERNATE / JPA
+# ========================================
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
 
-# JWT
+# ========================================
+# JWT CONFIGURATION
+# ========================================
 jwt.secret=TuClaveSecretaSuperSeguraParaRockxyQueDebeSerMuyLarga123456
 jwt.expiration=86400000
+
+# ========================================
+# LOGGING
+# ========================================
+logging.level.org.springframework.security=DEBUG
+logging.level.com.example.rockxy=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# ========================================
+# CONFIGURACIÓN ADICIONAL
+# ========================================
+spring.jackson.serialization.fail-on-empty-beans=false
