--- a/backend/rockxy/rockxy/src/main/resources/application.properties
+++ b/backend/rockxy/rockxy/src/main/resources/application.properties
@@ -1,52 +1,15 @@
-# ========================================
-# CONFIGURACIÓN DEL SERVIDOR
-# ========================================
 server.port=8080
-server.error.include-message=always
-server.error.include-binding-errors=always
-
-# ========================================
-# CONFIGURACIÓN DE H2 DATABASE
-# ========================================
 spring.datasource.url=jdbc:h2:mem:rockxydb
-spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=Rockxyadmin
 spring.datasource.password=1234Rockxy
 
-# PLATAFORMA DE BASE DE DATOS
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
-# ========================================
-# CONSOLA H2 - ACCESO PÚBLICO
-# ========================================
+# Consola H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
-spring.h2.console.settings.web-allow-others=true
-spring.h2.console.settings.trace=false
 
-# ========================================
-# HIBERNATE / JPA
-# ========================================
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.use_sql_comments=true
-
-# ========================================
-# JWT CONFIGURATION
-# ========================================
+# JWT
 jwt.secret=TuClaveSecretaSuperSeguraParaRockxyQueDebeSerMuyLarga123456
 jwt.expiration=86400000
 
-# ========================================
-# LOGGING
-# ========================================
-logging.level.org.springframework.security=DEBUG
-logging.level.com.example.rockxy=DEBUG
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-
-# ========================================
-# CONFIGURACIÓN ADICIONAL
-# ========================================
-spring.jackson.serialization.fail-on-empty-beans=false
+# Logging
+logging.level.org.springframework.security=INFO
