--- a/backend/rockxy/rockxy/src/main/java/com/example/rockxy/render.yaml
+++ b/backend/rockxy/rockxy/src/main/java/com/example/rockxy/render.yaml
@@ -1,16 +1,18 @@
-# Archivo render.yaml en la raíz del repositorio
 services:
   - type: web
-    name: rockxy-service
-    # Forzar el entorno de ejecución a Java
+    name: rockxy-backend
     env: java
-    plan: starter # O el plan que estés usando
-    # Comando para construir el proyecto con Maven
-    buildCommand: "./mvnw clean install -DskipTests"
-    # Comando para iniciar la aplicación (Asumiendo Spring Boot/Jar)
-    # **Asegúrate de que este nombre de JAR sea correcto**
-    startCommand: "java -jar target/Rockxy-0.0.1-SNAPSHOT.jar"
+    plan: free
+    # Ruta al backend en tu repositorio
+    rootDir: backend/rockxy/rockxy
+    buildCommand: ./mvnw clean install -DskipTests
+    startCommand: java -jar target/rockxy-0.0.1-SNAPSHOT.jar
     envVars:
-      # Definición explícita de JAVA_HOME
-      - key: JAVA_HOME
-        value: /usr/lib/jvm/java-17-openjdk-amd64
+      - key: JAVA_VERSION
+        value: "17"
+      - key: PORT
+        value: "8080"
+      - key: JWT_SECRET
+        generateValue: true
+      - key: JWT_EXPIRATION
+        value: "86400000"
