--- a/backend/rockxy/rockxy/src/main/resources/application.properties
+++ b/backend/rockxy/rockxy/src/main/resources/application.properties
@@ -1,15 +1,24 @@
-server.port=8080
+# Puerto dinámico para Render
+server.port=${PORT:8080}
+
+# Base de datos H2 (en producción considera PostgreSQL)
 spring.datasource.url=jdbc:h2:mem:rockxydb
 spring.datasource.username=Rockxyadmin
 spring.datasource.password=1234Rockxy
 
-# Consola H2
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+# Consola H2 - Desactivar en producción
+spring.h2.console.enabled=false
 
-# JWT
-jwt.secret=TuClaveSecretaSuperSeguraParaRockxyQueDebeSerMuyLarga123456
-jwt.expiration=86400000
+# JWT - Variables de entorno
+jwt.secret=${JWT_SECRET:TuClaveSecretaSuperSeguraParaRockxyQueDebeSerMuyLarga123456}
+jwt.expiration=${JWT_EXPIRATION:86400000}
 
 # Logging
 logging.level.org.springframework.security=INFO
+
+# JPA
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=false
+
+# Permitir CORS desde el frontend
+server.servlet.context-path=/
