--- a/backend/rockxy/rockxy/src/main/java/com/example/rockxy/render.yaml
+++ b/backend/rockxy/rockxy/src/main/java/com/example/rockxy/render.yaml
@@ -2,15 +2,15 @@
 services:
   # --- Definición del Servicio Web ---
   - type: web
-    name: rockxy-backend # Nombre que Render usará para el servicio
+    name: rockxy-backend # Nombre del servicio en Render
 
-    # 1. ESENCIAL: Define el entorno como Java (esto soluciona la detección de Node.js)
+    # 1. ESENCIAL: Define el entorno como Java (esto corrige la detección de Node.js)
     env: java
 
-    # Define tu región de preferencia (ej: oregon, frankfurt, etc.)
+    # Puedes elegir la región que prefieras (ej: oregon, frankfurt)
     region: oregon
 
-    # Define el plan de servicio (cambia a 'standard' si necesitas más recursos)
+    # Plan de servicio (starter para proyectos pequeños, standard para mayor rendimiento)
     plan: starter
 
     # --- Comandos de Despliegue ---
@@ -19,9 +19,8 @@ services:
     buildCommand: "./mvnw clean install -DskipTests"
 
     # Comando de inicio: Ejecuta el archivo JAR que Maven generó.
-    # *** IMPORTANTE: DEBES REEMPLAZAR 'nombre-del-jar-generado.jar' ***
-    # Búscalo en tu compilación local, generalmente es target/tu-artefacto-version.jar
-    startCommand: "java -jar target/rockxy-0.0.1-SNAPSHOT.jar"
+    # ¡DEBES VERIFICAR ESTE NOMBRE DE ARCHIVO!
+    startCommand: "java -jar backend/rockxy/rockxy/target/rockxy-0.0.1-SNAPSHOT.jar"
 
     # --- Variables de Entorno ---
     envVars:
@@ -33,11 +32,11 @@ services:
       - key: PORT
         value: 8080
 
-      # Variables Secretas que ya tenías
+      # Variables Secretas (Mantén tus valores aquí)
       - key: JWT_EXPIRATION
         value: # Tu valor de expiración
       - key: JWT_SECRET
         value: # Tu clave secreta
 
 
-      # *** Añade aquí cualquier otra variable de configuración de base de datos o API ***
+      # *** Asegúrate de añadir aquí cualquier otra variable de DB o credenciales ***
