--- a/backend/rockxy/rockxy/src/main/java/com/example/rockxy/render.yaml
+++ b/backend/rockxy/rockxy/src/main/java/com/example/rockxy/render.yaml
@@ -1,15 +1,24 @@
 services:
   - type: web
     name: rockxy
-    runtime: docker
-    repo: https://github.com/juanroldan1/Rockxy
+    env: node
+    buildCommand: |
+      echo "Installing Java 17..."
+      sudo apt-get update
+      sudo apt-get install -y openjdk-17-jdk
+
+      echo "Configuring JAVA_HOME..."
+      export JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64
+      export PATH=$JAVA_HOME/bin:$PATH
+
+      echo "Building Spring Boot backend..."
+      ./mvnw clean install -DskipTests
+
+    startCommand: |
+      echo "Starting Spring Boot app..."
+      export JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64
+      export PATH=$JAVA_HOME/bin:$PATH
+      java -jar target/*.jar
+
     plan: free
-    region: ohio # puedes cambiarlo si quieres
-    dockerfilePath: ./Dockerfile
-
-    envVars:
-      - key: SPRING_PROFILES_ACTIVE
-        value: prod
-
-    healthCheckPath: /
     autoDeploy: true
