--- a/backend/rockxy/rockxy/src/main/resources/application.properties
+++ b/backend/rockxy/rockxy/src/main/resources/application.properties
@@ -1,24 +1,49 @@
-# Puerto dinámico para Render
+# ====================================
+# CONFIGURACIÓN PARA RAILWAY + POSTGRESQL
+# ====================================
+
+# Puerto dinámico (Railway asigna automáticamente)
 server.port=${PORT:8080}
 
-# Base de datos H2 (en producción considera PostgreSQL)
-spring.datasource.url=jdbc:h2:mem:rockxydb
-spring.datasource.username=Rockxyadmin
-spring.datasource.password=1234Rockxy
+# ====================================
+# POSTGRESQL DATABASE CONFIGURATION
+# ====================================
+# Railway proporciona DATABASE_URL automáticamente
+spring.datasource.url=${DATABASE_URL:jdbc:h2:mem:rockxydb}
+spring.datasource.username=${PGUSER:Rockxyadmin}
+spring.datasource.password=${PGPASSWORD:1234Rockxy}
+spring.datasource.driver-class-name=${DB_DRIVER:org.h2.Driver}
 
-# Consola H2 - Desactivar en producción
-spring.h2.console.enabled=false
+# Dialecto PostgreSQL
+spring.jpa.database-platform=${DB_DIALECT:org.hibernate.dialect.H2Dialect}
 
-# JWT - Variables de entorno
+# ====================================
+# JPA/HIBERNATE CONFIGURATION
+# ====================================
+# Para producción: update (mantiene datos)
+# Para desarrollo: create-drop (borra y recrea)
+spring.jpa.hibernate.ddl-auto=${DDL_AUTO:update}
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
+
+# ====================================
+# JWT SECURITY
+# ====================================
 jwt.secret=${JWT_SECRET:TuClaveSecretaSuperSeguraParaRockxyQueDebeSerMuyLarga123456}
 jwt.expiration=${JWT_EXPIRATION:86400000}
 
-# Logging
+# ====================================
+# CONSOLA H2 (DESACTIVAR EN PRODUCCIÓN)
+# ====================================
+spring.h2.console.enabled=false
+
+# ====================================
+# LOGGING
+# ====================================
 logging.level.org.springframework.security=INFO
+logging.level.org.hibernate.SQL=INFO
 
-# JPA
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=false
-
-# Permitir CORS desde el frontend
+# ====================================
+# CORS (permitir frontend)
+# ====================================
 server.servlet.context-path=/
