--- a/backend/rockxy/rockxy/src/main/resources/application.properties
+++ b/backend/rockxy/rockxy/src/main/resources/application.properties
@@ -1,49 +1,21 @@
-# ====================================
-# CONFIGURACIÓN PARA RAILWAY + POSTGRESQL
-# ====================================
+# -------------------------------------------------------------
+# CONFIGURACIÓN DE BASE DE DATOS POSTGRESQL PARA RAILWAY
+# -------------------------------------------------------------
 
-# Puerto dinámico (Railway asigna automáticamente)
+# La URL de conexión. Spring Boot lee estas variables de Railway.
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${PGUSER}
+spring.datasource.password=${PGPASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Configuración de JPA/Hibernate
+# Esto creará las tablas la primera vez en PostgreSQL y las actualizará después
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# -------------------------------------------------------------
+# CONFIGURACIÓN DEL SERVIDOR WEB
+# -------------------------------------------------------------
+# Esto asegura que Spring Boot escuche en el puerto que Railway le asigna.
 server.port=${PORT:8080}
-
-# ====================================
-# POSTGRESQL DATABASE CONFIGURATION
-# ====================================
-# Railway proporciona DATABASE_URL automáticamente
-spring.datasource.url=${DATABASE_URL:jdbc:h2:mem:rockxydb}
-spring.datasource.username=${PGUSER:Rockxyadmin}
-spring.datasource.password=${PGPASSWORD:1234Rockxy}
-spring.datasource.driver-class-name=${DB_DRIVER:org.h2.Driver}
-
-# Dialecto PostgreSQL
-spring.jpa.database-platform=${DB_DIALECT:org.hibernate.dialect.H2Dialect}
-
-# ====================================
-# JPA/HIBERNATE CONFIGURATION
-# ====================================
-# Para producción: update (mantiene datos)
-# Para desarrollo: create-drop (borra y recrea)
-spring.jpa.hibernate.ddl-auto=${DDL_AUTO:update}
-spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.format_sql=true
-
-# ====================================
-# JWT SECURITY
-# ====================================
-jwt.secret=${JWT_SECRET:TuClaveSecretaSuperSeguraParaRockxyQueDebeSerMuyLarga123456}
-jwt.expiration=${JWT_EXPIRATION:86400000}
-
-# ====================================
-# CONSOLA H2 (DESACTIVAR EN PRODUCCIÓN)
-# ====================================
-spring.h2.console.enabled=false
-
-# ====================================
-# LOGGING
-# ====================================
-logging.level.org.springframework.security=INFO
-logging.level.org.hibernate.SQL=INFO
-
-# ====================================
-# CORS (permitir frontend)
-# ====================================
-server.servlet.context-path=/
